2001-11-27  Seth Nickell  <snickell@stanford.edu>

	* modules/programs.vfolder-info.in:

	Add/Remove/Rename categories to comply with current
	HIG spec.

Mon Nov 26 21:52:01 2001  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: always avoid mime-type checks
	  on real file and just force the right mime types.  If a scheme
	  starts with 'all-', then this is just a flat listing of all
	  the .desktops in that scheme.  And fix a leak or two.

	* modules/default-modules.conf: add all-programs: scheme for
	  vfolder-desktop-method

2001-11-26  Seth Nickell  <snickell@stanford.edu>

	* NEWS:

	Update news...

2001-11-26  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Bump version to 1.9.4, tag, release (rinse repeat).

2001-11-22  Seth Nickell <snickell@stanford.edu>

	* doc/gnome-vfs-docs.sgml

	Add reference to section on "installing MIME data"

	* doc/installing-mime-data.sgml

	Blurb moved from the HIG.

2001-11-21  Wang Jian  <lark@linux.net.cn>

	* configure.in(ALL_LINGUAS): Added zh_CN for Simplified Chinese.

Tue Nov 20 19:32:11 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in (FAM_LIBS): Add some more quoting that
	is needed for some autoconf versions.

	* libgnomevfs/gnome-vfs-mime-monitor.c: Remove gobject/gsignal.h.

2001-11-18  Miles Lane  <miles@megapathdsl.net>

	* libgnomevfs/gnome-vfs-mime-monitor.h: 
	replace include of gobject/gobject.h
	with glib-object.h, due to a change in gobject/gobject.h
	that forces an #error for all direct includes.
	This checkin was approved by Havoc.

2001-11-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:

	Fix default detection of OpenSSL libraries


2001-11-08  Maciej Stachowiak  <mjs@noisehavoc.org>

	* libgnomevfs/gnome-vfs-helpers.c,
	libgnomevfs/gnome-vfs-helpers.h, libgnomevfs/Makefile.am: Removed
	because we don't want to lock in this messy API and there is no
	time for proper cleanup. Some eel functions will probably migrate
	to gnome-vfs later.
