@@ -1,3 +1,9 @@
+Tue Nov 27 16:55:34 2001  George Lebl <jirka@5z.com>
+
+	* modules/vfolder-desktop-method.c: implement ReadOnly and
+	  DontShowIfEmpty flags on folders and a ReadOnly flag on
+	  the main info xml tree.
+
 2001-11-27  Seth Nickell  <snickell@stanford.edu>
 
 	* modules/programs.vfolder-info.in:
